giving experience-info-block a fixed height to stop shifting elements below it

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,8 @@ button.experience-button {
 .experience-info-block {
     border: 3px solid #00695C;
     border-radius: 10px;
-    padding: 10px;
+    padding: 15px;
+    height: 300px;
 }
 .experience-info {
     padding-left: 20px;
